--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -3,12 +3,12 @@
     background: #f9f9f9;
     padding: 12px;
     margin: 1.5em auto;
-    display: inline-block;   /* Ensures box fits the equation width */
+    display: inline-block;
 }
 
 .math-block figcaption {
     font-size: 0.85em;
-    font-style: normal;      /* make caption non-italic */
+    font-style: normal;
     text-align: center;
     margin-top: 0.3em;
     color: #555;
@@ -16,8 +16,9 @@
 
 .math-caption {
     font-size: 0.85em;
-    font-style: normal;      /* override italic if used elsewhere */
+    font-style: normal;
     text-align: center;
     margin-top: 0.3em;
     margin-bottom: 1em;
     color: #555;
+
