--- a/docs/custom_theme/css/custom.css
+++ b/docs/custom_theme/css/custom.css
@@ -14,7 +14,7 @@
     color: white !important;               
 }
 .admonition.example {
-    background-color: #f2f2f2 !important; 
+    background-color: #e3e3e3 !important; 
     border-color: #8b8b8b !important;     
 }
 
