--- a/docs/custom_theme/css/custom.css
+++ b/docs/custom_theme/css/custom.css
@@ -35,9 +35,9 @@ pre {
 }
 
 /* Specific Syntax Highlighting Overrides for this box */
-.vscode-box .k, .vscode-box .kc { color: #569CD6 !important; }      /* Keywords (def, import) */
-.vscode-box .nf { color: #DCDCAA !important; }                      /* Functions */
-.vscode-box .s2, .vscode-box .s1 { color: #CE9178 !important; }     /* Strings */
-.vscode-box .mi { color: #B5CEA8 !important; }                      /* Numbers */
-.vscode-box .c1 { color: #6A9955 !important; font-style: italic; }  /* Comments */
-.vscode-box .nb { color: #4EC9B0 !important; }                      /* Built-ins/Classes */
+.styledcode-box .k, .styledcode-box .kc { color: #569CD6 !important; }  /* Keywords (def, import) */
+.styledcode-box .nf { color: #DCDCAA !important; }                      /* Functions */
+.styledcode-box .s2, .styledcode-box .s1 { color: #CE9178 !important; } /* Strings */
+.styledcode-box .mi { color: #B5CEA8 !important; }                      /* Numbers */
+.styledcode-box .c1 { color: #6A9955 !important; font-style: italic; }  /* Comments */
+.styledcode-box .nb { color: #4EC9B0 !important; }                      /* Built-ins/Classes */
