--- a/docs/custom_theme/css/custom.css
+++ b/docs/custom_theme/css/custom.css
@@ -32,6 +32,7 @@ pre {
     color: #555555 !important;              
     background-color: #f8f8f8 !important;    
     border: 1px solid #e1e4e5 !important;
+    line-height: 1.6 !important;
 }
 
 /* Specific Syntax Highlighting Overrides for this box */
